kubernetes/apps/infisical/infisical/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.m00nlit.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app ${APP}
spec:
  hostnames: ["${APP}.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: network
  rules:
    - backendRefs:
        - name: *app
          port: 8080
